[package]
name = "wasmedge_counter_interface"
version = "1.0.0"
authors = ["gusye"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "A Rust library that provides Rust to WebAssembly developers with syntax for running wasmedge self-defined host functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wasmedge_counter_interface"
path = "src/lib_counter.rs"
